--- a/index.html
+++ b/index.html
@@ -13,12 +13,10 @@
   <link rel="stylesheet" href="index.css">
   <title>Frontend Mentor | Stats preview card component</title>
 
-
-
 </head>
 
 <body>
-  <div id="maindiv">
+  <main id="maindiv">
     <div id="divf">
       <div class="text">
         <h1 class="heading font">Get <span id="insight">insights</span> that help your bussiness grow</h1>
@@ -42,17 +40,15 @@
       </div>
     </div>
 
-
-
     <div id="divs">
       <img src="images/image-header-desktop.jpg" id="im1" alt="">
     </div>
-  </div>
+  </main>
 
-  <div class="attribution color">
+  <footer class="attribution color">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
     Coded by <a href="#">Salahudheen k</a>.
-  </div>
+  </footer>
 </body>
 
 </html>
